--- a/src/style.css/login.css
+++ b/src/style.css/login.css
@@ -1,15 +1,15 @@
 .container {
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 14%, rgba(9,9,121,0.6502976190476191) 56%, rgba(0,212,255,1) 100%);
   align-items: center;
+  background: linear-gradient
+  (90deg,rgba(2,0,36,1) 14%,rgba(9,9,121,0.650) 56%,rgba(0,212,255,1) 100% );
   display: flex;
   flex-direction: column;
-  justify-content: center;
   height: 100vh;
+  justify-content: center;
   width: 100vw;
 }
 
-.logo-trivia{
+.logo-trivia {
   width: 550px;
   margin-bottom: 50px;
 }
@@ -17,30 +17,30 @@
 .form-container {
   align-items: center;
   background-color: rgb(252, 252, 252);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-flow: column wrap;
-  justify-content: center;
   height: 40vh;
-  width: 400px;
+  justify-content: center;
   margin-bottom: 200px;
+  width: 400px;
 }
 
 .div-input {
   display: flex;
   justify-content: center;
-  width: 100%;
   margin: 0 0 20px;
+  width: 100%;
 }
 
 .form-container input {
-  font-size: 1.2rem;
-  outline: none;
-  margin: 5px;
-  width: 60%;
-  padding: 7px;
   border: 0;
+  font-size: 1.2rem;
+  margin: 5px;
+  outline: none;
+  padding: 7px;
+  width: 60%;
   border-bottom: 1px solid black;
 }
 
@@ -48,24 +48,18 @@
   border-bottom: 1px solid rgb(65, 97, 240);
 }
 
-.form-container input:focus ~ ::placeholder {
-  transform: translateY(-12);
-  font-size: 0.5rem;
-}
-
 button {
-  cursor: pointer;
   border-radius: 5px;
-  text-decoration: none;
+  cursor: pointer;
+  color: white;
   font-size: 1.2rem;
-  width: 150px;
+  text-decoration: none;
   padding: 8px;
-  color: #FFFFFF;
+  width: 150px;
 }
 
 .btn-play {
   background-color: #448cf1;
-  margin: 5px;
   margin: 0 0 20px;
 }
 
@@ -74,12 +68,12 @@ button {
 }
 
 .btn-settings {
+  background-color: #79848E;
   cursor: pointer;
   text-decoration: none;
-  background-color: #79848E;
 }
 
-.btn-settings:hover{
+.btn-settings:hover {
+  box-shadow: 0px 1px 2px black;
   opacity: 0.9;
-  box-shadow: 0px 1px 2px #000000;
 }
