--- a/src/style.css/login.css
+++ b/src/style.css/login.css
@@ -1,7 +1,7 @@
 .container {
   align-items: center;
-  background: linear-gradient
-  (90deg,rgba(2,0,36,1) 14%,rgba(9,9,121,0.650) 56%,rgba(0,212,255,1) 100% );
+  background: linear-gradient(
+    90deg, rgba(2,0,36,1) 14%, rgba(9,9,121,0.650) 56%, rgba(0,212,255,1) 100% );
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -10,8 +10,8 @@
 }
 
 .logo-trivia {
-  width: 550px;
   margin-bottom: 50px;
+  width: 550px;
 }
 
 .form-container {
@@ -36,12 +36,12 @@
 
 .form-container input {
   border: 0;
+  border-bottom: 1px solid black;
   font-size: 1.2rem;
   margin: 5px;
   outline: none;
   padding: 7px;
   width: 60%;
-  border-bottom: 1px solid black;
 }
 
 .form-container input:focus {
@@ -50,11 +50,11 @@
 
 button {
   border-radius: 5px;
-  cursor: pointer;
   color: white;
+  cursor: pointer;
   font-size: 1.2rem;
-  text-decoration: none;
   padding: 8px;
+  text-decoration: none;
   width: 150px;
 }
 
@@ -68,12 +68,12 @@ button {
 }
 
 .btn-settings {
-  background-color: #79848E;
+  background-color: #79848e;
   cursor: pointer;
   text-decoration: none;
 }
 
 .btn-settings:hover {
-  box-shadow: 0px 1px 2px black;
+  box-shadow: 0 1px 2px black;
   opacity: 0.9;
 }
