--- a/src/style.css/login.css
+++ b/src/style.css/login.css
@@ -1,7 +1,6 @@
 .container {
   align-items: center;
-  background: linear-gradient(
-    90deg, rgba(2,0,36,1) 14%, rgba(9,9,121,0.650) 56%, rgba(0,212,255,1) 100% );
+  background: linear-gradient(90deg, black 14%, darkblue 56%, rgba(0, 212, 255, 1) 100%);
   display: flex;
   flex-direction: column;
   height: 100vh;
